--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 { 
     "compilerOptions": 
     {
-        "declaration": true, 
-        "declarationMap": true, 
-        "sourceMap": true, 
         "strict": true, 
         "noImplicitAny": true, 
         "noUnusedLocals": true, 
         "noUnusedParameters": true, 
         "noImplicitReturns": true,
         "resolveJsonModule": true,
-
+        "esModuleInterop": true
     }
 }
